--- a/src/app/rooms/rooms.page.html
+++ b/src/app/rooms/rooms.page.html
@@ -1,9 +1,28 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>rooms</ion-title>
+    <ion-title>部屋一覧</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <a [routerLink]="['/rooms', 'foo']">foo</a>
+  <ion-list *ngIf="(activeRooms$ | async); let activeRooms">
+    <ion-list-header>
+      アクティブな部屋一覧
+    </ion-list-header>
+    <ion-item
+      *ngFor="let room of activeRooms; trackBy: trackRoom"
+      detail
+      [routerLink]="['/rooms', room.key]"
+    >
+      <ion-grid>
+        <ion-row>
+          <ion-col size="10" sizeLg="2">{{room.name}}</ion-col>
+          <ion-col size="2">{{room.activeMemberCount}}人</ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ion-list>
+  <div text-center *ngIf="!(activeRooms$ | async)">
+    <ion-spinner></ion-spinner>
+  </div>
 </ion-content>
