add menu button and action sheet

--- a/src/app/rooms/rooms.page.html
+++ b/src/app/rooms/rooms.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>部屋一覧</ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button autoHide="false" (click)="shouldShowMenu()"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
